# opentag-backend

./: README.md  app.py  docker-compose.yaml  pyproject.toml  requirements.txt
model/: models.py  tracker.py
routes/: tracker_routes.py
web/: index.html
web/assets/: dashboard.css  main.js
