[tool.poetry]
name = "report-generator"
version = "0.1.0"
description = "Generates Reports"
authors = ["Fardad Afscharian <fardad.afscharian@googlemail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
litestar = "^2.0.0beta4"
environs = "^9.5"
urllib3 = "^2.0"
python-dateutil = "^2.8.2"

[tool.poetry.group.dev.dependencies]
ruff = "*"
black = "*"
pytest = "^7.3"
mypy = "^1.4"
uvicorn = "^0.23"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.mypy]
strict = true
# causes problems with pandera and mypy
disable_error_code = ["assignment"]

[tool.ruff]
target-version = "py311"
line-length = 120
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
src = ["."]
task-tags = ["TODO"]

# https://beta.ruff.rs/docs/rules/
select = [
  # Pyflakes
  "F", 
  # pycodestyle
  "E", "W",
  # mccabe
  "C90",
  # isort
  "I",
  # pep8-naming
  "N",
  # flake8 plugins
  "ANN", "B", "A", "C4", "DTZ", "Q", "ICN", "PIE", "T20", "ISC", "TCH", "ARG",
  # eradicate
  "ERA",
  # pandas-vet
  "PD",
]
unfixable = ["F401", "ERA"]

ignore = ["ANN101", "DTZ001"]

exclude = [
  "input",
  "output",
  ".idea",
  ".vscode",
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
  ".venv",
]

[tool.ruff.per-file-ignores]
"tests/*.py" = ["ANN201"]

[tool.ruff.flake8-quotes]
inline-quotes = "double"

[tool.ruff.mccabe]
max-complexity = 5
